# Brainstack

./: .gitignore  .mailmap  README.md  README_brainstack_rewrite.md  RELEASE_v1.0.0.md  RELEASE_v1.0.1.md  RELEASE_v1.0.2.md  RELEASE_v1.0.5.md  brainstack_doctor.py  install_into_hermes.py  pyproject.toml  requirements-dev.txt  rtk_sidecar.py  update_hermes_with_brainstack.py
.planning/: HANDOFF-BRAINSTACK-2026-04-09.md  HANDOFF.json  IMMUTABLE-PRINCIPLES.md  PR-CANDIDATES.md  PROGRAM-EXECUTION.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  WORKSPACE-BOUNDARIES.md  config.json
brainstack/: __init__.py  answerability.py  associative_expansion.py  authority_policy.py  behavior_policy.py  consolidation.py  control_plane.py  corpus.py  corpus_backend.py  corpus_backend_chroma.py  corpus_ingest.py  corpus_retrieval_trace.py  corpus_taxonomy.py  db.py  db_diagnostics.py  db_migrations.py  db_ops.py  db_row_codecs.py  db_schema.py  diagnostics.py  document_pipeline.py  entity_resolver.py  executive_retrieval.py  explicit_capture.py  explicit_truth_parity.py  extraction_pipeline.py  file_corpus_source.py  graph.py  graph_backend.py  graph_backend_kuzu.py  graph_evidence.py  graph_lineage.py  knowledge_schema.py  legacy_graph_text_extractor.py  literal_index.py  live_system_state.py  local_typed_understanding.py  logistics_contract.py  maintenance.py  modality_contract.py  (+27 more)
docs/: EXTERNAL_PR_CANDIDATES.md  HOST_PATCH_SURFACE.md  PUBLISHING_SCOPE.md
scripts/: _brainstack_host_shim.py  audit_brainstack_route_hint.py  brainstack_architecture_fitness.py  (+23 more)
(+758 files in other folders)
