[project]
name = "brainstack-hermes-plugin"
version = "1.0.38"
description = "Brainstack memory-kernel plugin for Hermes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
backends = [
  "chromadb",
  "kuzu",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "mypy>=1.14",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
follow_imports = "skip"
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
